--- a/joc.html
+++ b/joc.html
@@ -17,6 +17,17 @@
 
     <!-- JAVASCRIPT -->
     <script src="js/joc.js"></script>
+    <!-- Hotjar Tracking Code for https://martacorva.github.io/ -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:2306007,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 
     <!-- CSS PROPI -->
     <link rel="stylesheet" href="css/joc.css" />
@@ -206,15 +217,6 @@
         <!-- FOOTER -->
         <footer class="bg-dark">
             <p>&copy; 2021 Marta Córcoles Valle</p>
-            <script type="text/javascript">
-                window._mfq = window._mfq || [];
-                (function() {
-                  var mf = document.createElement("script");
-                  mf.type = "text/javascript"; mf.defer = true;
-                  mf.src = "//cdn.mouseflow.com/projects/002c6d2b-7cb3-4c32-9f21-ce06f891f40b.js";
-                  document.getElementsByTagName("head")[0].appendChild(mf);
-                })();
-              </script>
         </footer>
 
     </main>
