--- a/tenda.html
+++ b/tenda.html
@@ -17,17 +17,15 @@
 
     <!-- JAVASCRIPT -->
     <script src="js/tenda.js"></script>
-    <!-- Hotjar Tracking Code for https://martacorva.github.io/ -->
-<script>
-    (function(h,o,t,j,a,r){
-        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-        h._hjSettings={hjid:2306007,hjsv:6};
-        a=o.getElementsByTagName('head')[0];
-        r=o.createElement('script');r.async=1;
-        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-        a.appendChild(r);
-    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    
+    <script type='text/javascript'>
+        window.smartlook||(function(d) {
+          var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+          var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+          c.charset='utf-8';c.src='https://rec.smartlook.com/recorder.js';h.appendChild(c);
+          })(document);
+          smartlook('init', '1ef91a0b41578e84a9c3165c44cd59ebf4b59f31');
+      </script>
 
     <!-- CSS PROPI -->
     <link rel="stylesheet" href="css/tenda.css" />
